<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yelpBackgroundLight"
    android:paddingVertical="20sp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:windowSoftInputMode="stateAlwaysHidden">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="12pt"
        android:textColor="@color/yelpBlack"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:paddingVertical="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_term_title"
        android:textSize="10pt"
        android:textColor="@color/yelpBlack"
        android:layout_marginLeft="10sp"/>

    <EditText
        android:id="@+id/searchTerm"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:hint="@string/search_term_hint"
        android:textColor="@color/yelpBlack"
        android:textColorHint="@color/yelpTextGhost"
        android:inputType="text"
        android:textSize="10pt"
        android:cursorVisible="true"
        android:focusedByDefault="false"
        android:layout_marginHorizontal="6sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="20sp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_radius"
            android:textSize="10pt"
            android:textColor="@color/yelpBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/radiusValue"
            android:layout_width="60pt"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:background="@null"
            android:hint="25 (max)"
            android:textColor="@color/yelpBlack"
            android:textColorHint="@color/yelpTextGhost"
            android:inputType="numberDecimal"
            android:textSize="10pt"
            android:maxLength="4"
            android:cursorVisible="false"
            android:focusedByDefault="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/unitText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mi"
            android:textSize="10pt"
            android:textColor="@color/yelpBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15sp"
        android:paddingHorizontal="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_rating"
            android:textSize="10pt"
            android:textColor="@color/yelpBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <edu.sjsu.android.restaurantroller.ThumbTextSeekBar
            android:id="@+id/ratingBar"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:max="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15sp"
        android:paddingLeft="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_price"
            android:textColor="@color/yelpBlack"
            android:textSize="10pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/priceMin"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/priceText"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/prices_list"/>

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to"
            android:textSize="10pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/priceMax"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/priceMax"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/prices_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/loading"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

</LinearLayout>